--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -41,6 +41,12 @@
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 10px; 
+    @media #{$medium-up} {
+      margin-top: 0px;
+      margin-bottom: 0px;
+  }
   }
 }
 
@@ -80,6 +86,13 @@
     margin-bottom: 15px;
     h3 {
       margin: 0;
+    }
+  }
+  
+  .current-portfolio--button {
+    margin-top: 10px;
+    @media #{$medium-up} {
+      margin-top: 0px;
     }
   }
   
